# pragma-lint

./: .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yaml  mise.toml  pyproject.toml
.github/workflows/: publish-js.yaml  publish-python.yaml  publish.yaml  release.yml
js/: .cz.toml  CHANGELOG.md  README.md  Taskfile.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
js/src/: index.ts
js/src/eslint-config/: index.ts  options.ts
js/tests/: eslint-config.test.ts  eslint-integration.test.ts
js/tests/fixtures/: abbreviation.ts  compound_name.ts  todo_comment.ts
python/: CHANGELOG.md  README.md  Taskfile.yaml  pyproject.toml
python/src/pragmatiks_lint/: __init__.py  _rules.py  cli.py  findings.py  runner.py
python/tests/: conftest.py  test_cli.py  test_rules_smoke.py
python/tests/fixtures/: abbreviation_violation.py  block_comment_violation.js  block_comment_violation.py  env_read_violation.py  io_prefix_violation.py  srp_js_non_violation.js  srp_js_violation.js  srp_violation.py  todo_violation.js  todo_violation.py
rules/: pra_env_read_deep.yml  pra_io_prefix_mismatch.yml  pra_no_abbreviations_python.yml  pra_no_block_comments.yml  pra_no_todo_comments.yml  pra_srp_and_or_name.yml
