[project]
name = "pragmatiks-lint"
version = "0.2.0"
description = "Library API and bundled semgrep rules for Pragmatiks engineering principles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0.0",
    "rich>=13.9.0",
    "semgrep>=1.145.0",
    "typer>=0.15.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
    "types-PyYAML>=6.0.0",
]

[project.entry-points."pragma.commands"]
lint = "pragmatiks_lint.cli:app"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
preview = true
select = [
    "E",
    "W",
    "F",
    "I",
    "PLC0415",
    "UP",
    "D",
    "DOC",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["pragmatiks_lint"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*.py" = ["D100", "D103"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/pragmatiks_lint", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_customize"
version = "0.3.0"
tag_format = "python-v$version"
ignored_tag_formats = ["js-v$version", "v$version"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
version_files = ["pyproject.toml:^version"]

[tool.commitizen.customize]
bump_pattern = "^(feat|fix|perf|refactor|BREAKING CHANGE)\\((python|rules)\\)"
bump_map = { "BREAKING CHANGE" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH" }
bump_map_major_version_zero = { "BREAKING CHANGE" = "MINOR", "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH" }
schema = "<type>(<scope>): <subject>"
schema_pattern = "^(build|chore|ci|docs|feat|fix|perf|refactor|style|test)(\\([^()]+\\))?(!)?: .+"
commit_parser = "^(?P<change_type>feat|fix|perf|refactor)\\((?P<scope>python|rules)\\)(?P<breaking>!)?: (?P<message>.+)$"
changelog_pattern = "^(feat|fix|perf|refactor)\\((python|rules)\\)(!)?:"
change_type_map = { "feat" = "Features", "fix" = "Bug Fixes", "perf" = "Performance", "refactor" = "Refactor" }

[tool.hatch.build.targets.wheel]
packages = ["src/pragmatiks_lint"]
include = ["src/pragmatiks_lint/semgrep_rules/*.yml"]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "src/pragmatiks_lint",
    "README.md",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"
